# ctemplate

./: .travis.yml  CMakeLists.txt  INSTALL  README.md
cmake/: AC_CHECK_FUNCS.cmake  AC_CHECK_HEADERS.cmake  AC_CHECK_TYPES.cmake  AC_CXX_STL_HASH.cmake  AC_CXX_STL_NAMESPACE.cmake  AC_DEFINE_GOOGLE_NAMESPACE.cmake  AC_HAVE__ATTRIBUTE__.cmake  AC_HEADER_STDC.cmake  AC_INTERLOCKED_EXCHANGE_NONVOLATILE.cmake  AC_RWLOCK.cmake  CheckDIRSymbolExists.cmake  WEAK_ATTRIBUTE.cmake  ac_cxx_stl_no_namespace.cpp  ac_cxx_stl_std_namespace.cpp  ac_interlocked_exchange.cpp  ac_rwlock.c  weak_attribute.cpp
prebuilt_fsms/htmlparser/: htmlparser_fsm.h  jsparser_fsm.h
prebuilt_fsms/tests/: statemachine_test_fsm.h
src/: config.h.cmake  diff_tpl_auto_escape.cc  make_tpl_varnames_h.cc  per_expand_data.cc  template_modifiers_internal.h
src/base/: arena-inl.h  arena.h  macros.h  manual_constructor.h
src/ctemplate/: find_ptr.h.in  per_expand_data.h.in  str_ref.h.in  template.h.in  template_annotator.h.in  template_cache.h.in  template_dictionary.h.in  template_dictionary_interface.h.in  template_emitter.h.in  template_modifiers.h.in  template_namelist.h.in  template_pathops.h.in  template_string.h.in
src/htmlparser/: htmlparser.cc  htmlparser.h
src/tests/: CMakeLists.txt  config_for_unittests.h
src/windows/: port.cc  port.h
